minor z-index error solved

--- a/src/styles/topsearch.scss
+++ b/src/styles/topsearch.scss
@@ -80,7 +80,7 @@ section {
       &:hover {
         .notificationsList {
           display: block;
-          z-index: 3;
+          z-index: 4;
         }
       }
       .notificationsList {
